--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "devDependencies": {
+    "concurrently": "^5.2.0",
     "typescript": "^3.9.7"
   },
   "name": "web",
   "description": "TS web framework to learn",
   "version": "1.0.0",
   "main": "index.html",
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.19.2"
+  },
   "scripts": {
-    "start": "parcel index.html"
+    "start:database": "json-server -w db.json",
+    "start:parcel": "parcel index.html",
+    "start": "concurrently npm:start:*"
   },
   "author": "",
   "license": "ISC"
